+ clock LED SPI
Signed-off-by: Dmitry Ponyatov <dponiatov@icbcom.ru>

--- a/test/cubeF030/cubeF030.ioc
+++ b/test/cubeF030/cubeF030.ioc
@@ -4,16 +4,24 @@ KeepUserPlacement=false
 Mcu.Family=STM32F0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
-Mcu.Pin0=PA9
-Mcu.Pin1=PA10
-Mcu.Pin2=PA13
-Mcu.Pin3=PA14
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.PinsNb=5
+Mcu.Pin0=PF0-OSC_IN
+Mcu.Pin1=PF1-OSC_OUT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -25,6 +33,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA10.Locked=true
+PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Locked=true
 PA13.Mode=Serial_Wire
@@ -32,7 +41,21 @@ PA13.Signal=SYS_SWDIO
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=LED
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Locked=true
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Locked=true
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PA9.Locked=true
+PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PCC.Checker=false
 PCC.Line=STM32F0x0 Value Line
@@ -42,6 +65,16 @@ PCC.Seq0=0
 PCC.Series=STM32F0
 PCC.Temperature=25
 PCC.Vdd=3.6
+PF0-OSC_IN.GPIOParameters=GPIO_Label
+PF0-OSC_IN.GPIO_Label=OSC_IN
+PF0-OSC_IN.Locked=true
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.GPIOParameters=GPIO_Label
+PF1-OSC_OUT.GPIO_Label=OSC_OUT
+PF1-OSC_OUT.Locked=true
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -69,11 +102,27 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
+RCC.AHBFreq_Value=1000000
+RCC.APB1Freq_Value=1000000
+RCC.APB1TimFreq_Value=1000000
+RCC.FCLKCortexFreq_Value=1000000
 RCC.FamilyName=M
-RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
+RCC.HCLKFreq_Value=1000000
+RCC.IPParameters=AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,PLLCLKFreq_Value,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 RCC.PLLCLKFreq_Value=8000000
-RCC.TimSysFreq_Value=8000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
+RCC.TimSysFreq_Value=1000000
+RCC.USART1Freq_Value=1000000
+RCC.VCOOutput2Freq_Value=4000000
+SPI1.CalculateBaudRate=500.0 KBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
