--- a/test/cubeF030/cubeF030.ioc
+++ b/test/cubeF030/cubeF030.ioc
@@ -80,7 +80,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -91,7 +91,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=0
+ProjectManager.LibraryCopy=2
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
@@ -99,10 +99,10 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=cubeF030.ioc
 ProjectManager.ProjectName=cubeF030
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM V8
+ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_SPI1_Init-SPI1-false-LL-true,4-MX_USART1_UART_Init-USART1-false-LL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
 RCC.AHBFreq_Value=1000000
 RCC.APB1Freq_Value=1000000
